--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -23,7 +23,7 @@ In this Chapter we explore and investigate the additional possibilities opened u
 We start by demonstrating the experimental observations made by applying not one, but two optical pulses to the SDW, and how their spacing changes drastically the response of the probed PLD.
 This showcases the additional complexity and control achieved over the standard single pump-probe experiments that were performed previously \cite{Singer2015prb, Singer2015prb}. 
 Among various possibilities, this additional control allows for the suppression of the intermediate nonequilibrium state thus reproducing adiabatic transitions on much faster timescales than would be possible without this control, which is termed ``shortcuts to adiabaticity'' in quantum technology \cite{Torrontegui2013,Deffner2014,Zhou2017}.
-After developing a phenomenological model, and fitting its parameters to reproduce the two pump-probe experiments, we utilize it to design a train of pulses such that the PLD oscillation follows a particular envelope function.
+After developing a phenomenological model in Sec.~\ref{sec:Cr_model}, and fitting its parameters to reproduce the two pump-probe experiments, we utilize it to design a train of pulses such that the PLD oscillation follows a particular envelope function in Sec.~\ref{sec:Cr_results}.
 We also comment on the characteristics of the model in order to gain a deeper understanding of what lies at the heart of this extended control. 
 
 \section{Experimental methods and results \label{sec:Cr_experiment}}
@@ -84,7 +84,7 @@ These considerations will be discussed in greater detail in Section~\ref{sec:Cr_
 \\\\
 Finally, the measurements demonstrate an absence of topological defects since the satellite fringe associated with the PLD (Fig.~\ref{fig:Cr_schematic}(b)) does not widen compared to the peak associated with the sample itself.
 This supports our previous claim that the optical pulses excite the thin film homogeneously. 
-\section{Theory}
+\section{Theory \label{sec:Cr_model}}
 % \lp{some explanation of Peierls instabilities etc, the things that cause the SDW in the first place?}
 
 % To understand how modulation of bond lengths changes the magnetic exchange between spins of the constituent ions, it is instructive to recall where the Heisenberg exchange form comes from, namely the Hubbard model:
