--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -99,9 +99,9 @@ This is because these studies usually involve the application of a tip to the su
 As mentioned before, however, even 180$^\circ$ DWs have a distinct strain texture associated with them, which extends much further than the narrow region in which the polarization reverses.
 This texture can be picked up mechanically by the applied tip and ultimately allows one to make the observations that will be discussed in the next Section, and are at the base of the research presented in this Chapter.
 
-Afterward, we continue with a short overview of the crystalline properties of BaTiO$_3$ in Section~\ref{sec:BTO_crystal}, an archetypal example of a ferroelectric perovskite.
-This is followed by a detailed theoretical study in Section~\ref{sec:BTO_theory}, a description of our numerical simulations in Section~\ref{sec:BTO_methods}, and a discussion of the obtained results in Section~\ref{sec:BTO_results}.
-Finally, we conclude by summarizing the results in Section~\ref{sec:BTO_conclusion}.
+Afterward, we continue with a short overview of the crystalline properties of BaTiO$_3$ in Sec.~\ref{sec:BTO_crystal}, an archetypal example of a ferroelectric perovskite.
+This is followed by a detailed theoretical study in Sec.~\ref{sec:BTO_theory}, a description of our numerical simulations in Sec.~\ref{sec:BTO_methods}, and a discussion of the obtained results in Sec.~\ref{sec:BTO_results}.
+Finally, we conclude by summarizing the results in Sec.~\ref{sec:BTO_conclusion}.
 
 \section{Experimental methods and results}
 In this Section, we summarize the experiments performed by the group of Prof. Catalan that were the impetus of this research \cite{Stefani2020}.
